Version 2.0
--------------
2011-09-20 erra <erra@ya.ru>
	* ircd/s_serv.c: m_trigger/m_untrigger fixed for optional class

2011-09-18 erra <erra@ya.ru>
	* common/match.c: bzero used instead of {0} assignment for mbs
	* ircd/s_user.c: condition fixed in check_triggers
	* ircd/s_serv.c: condition fixed in match_trigger

2011-09-15 erra <erra@ya.ru>
	* ircd/s_serv.c: m_trigger/m_untrigger for T:lines, /stats T
	* iserv/iserv.c: T:lines processing introduced

2011-09-14 erra <erra@ya.ru>
	* */*: #ifdef RUSNET_RLINES removed (now mandatory)
	* common/numeric_def.h, common/struct_def.h, ircd/s_err.c,
		ircd/s_user.c: usermode +c (colorless) added
	* ircd/channel.c: discard mode +R for older servers; restore mode
			assignment (affected modes with args)

2011-09-13 erra <erra@ya.ru>
	* common/send.c: colorless code cancelled (erroneous)
	* ircd/channel.c: discard colorful PART message for colorless channels
	* ircd/s_user.c: whois opnotice fixed

2011-09-12 erra <erra@ya.ru>
	* common/collsyms.h, common/match.c, common/sm_loop.c: GNU bash wchar
			matching code imported
	* support/Makefile.in: match.o dependencies updated

2011-09-11 erra <erra@ya.ru>
	* common/conversion.c: ICONV_CHAR definition adjusted for FreeBSD
	* common/os.h: #include <wctype.h> for FreeBSD
	* ircd/ircd.c: ttyname usage refined (code clearance)
	* ircd/res_init.c: redefinition of _D_UNUSED_ cancelled (code clearance)
	* ircd/s_auth.c: typo fixed in debugging code (code clearance)
	* ircd/s_conf.c: unused type conversion cancelled (code clearance)
	* ircd/s_id.c: signed/unsigned conversion (code clearance)
	* ircd/s_serv.c: check_tconfs marked out (not really used)
	* support/configure, support/configure.in: -I/usr/local/include for
			idna.h under FreeBSD

2011-09-09 erra <erra@ya.ru>
	* common/conversion.c, common/dbuf.c, common/dbuf_def.h,
		common/dbuf_ext.h, common/match.c, common/parse.c,
		common/send.c, common/struct_def.h, common/sys_def.h,