@@ -1,6 +1,10 @@
 Version 2.0
 --------------
 2011-09-20 erra <erra@ya.ru>
+	* ircd/s_err.c: RPL_STATSTRIGGER fixed
+	* ircd/s_serv.c: /stats T output fixed
+
+2011-09-20 erra <erra@ya.ru>
 	* ircd/s_serv.c: m_trigger/m_untrigger fixed for optional class
 
 2011-09-18 erra <erra@ya.ru>
